--- a/inner-page.html
+++ b/inner-page.html
@@ -41,10 +41,10 @@
         <ul>
           <li><a class="nav-link scrollto " href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li><a class="nav-link scrollto" href="#services">Services</a></li>
-          <li><a class="nav-link scrollto o" href="#portfolio">Portfolio</a></li>
-          <li><a class="nav-link scrollto" href="#team">Team</a></li>
-          <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li>
+          <li><a class="nav-link scrollto" href="#services">Streams</a></li>
+          <li><a class="nav-link scrollto o" href="#portfolio">Academies</a></li>
+          <li><a class="nav-link scrollto" href="#team">Mentors</a></li>
+          <li><a class="nav-link scrollto" href="#pricing">Connects</a></li>
           
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
           <li><a class="getstarted scrollto" href="#about">Get Started</a></li>
