--- a/index.html
+++ b/index.html
@@ -28,13 +28,7 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: OnePage
-  * Updated: Mar 10 2023 with Bootstrap v5.2.3
-  * Template URL: https://bootstrapmade.com/onepage-multipurpose-bootstrap-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+ 
 </head>
 
 <body>
@@ -163,7 +157,7 @@
 
           <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
             <div class="count-box">
-              <span data-purecounter-start="0" data-purecounter-end="55" data-purecounter-duration="2" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="48" data-purecounter-duration="2" class="purecounter"></span>
               <p>Coures Hosted</p>
             </div>
           </div>
@@ -177,7 +171,7 @@
 
           <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
             <div class="count-box">
-              <span data-purecounter-start="0" data-purecounter-end="500" data-purecounter-duration="2" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="798" data-purecounter-duration="2" class="purecounter"></span>
               <p>Certificates Earned by Students</p>
             </div>
           </div>
@@ -439,7 +433,7 @@
         <div class="text-center">
           <h3>Come and Join Us! </h3>
           <p> At the College of Computing and Information Technology, we connect you to various Academies to enhance your potential and knowledge in various technologies that are in demand across the labor market. Join us for a seamless learning experience and earn valuable Certificates for your Resume.</p>
-          <a class="cta-btn" href="#">Register Now!</a>
+          <a class="cta-btn" href="https://forms.gle/JmoCinPYJNk2kQ3LA">Register Now!</a>
         </div>
       </div>
     </section><!-- End Cta Section -->
@@ -709,7 +703,7 @@
                 <li class="na">CCNP</li>
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Register!</a>
+                <a href="https://forms.gle/JmoCinPYJNk2kQ3LA" class="btn-buy">Register!</a>
               </div>
             </div>
           </div>
@@ -726,7 +720,7 @@
                 <li class="na">Swift Enterprice</li>
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Enroll Now!</a>
+                <a href="https://forms.gle/JmoCinPYJNk2kQ3LA" class="btn-buy">Enroll Now!</a>
               </div>
             </div>
           </div>
@@ -744,7 +738,7 @@
                 <li>Machine Learning with AWS Services</li>
               </ul>
               <div class="btn-wrap">
-                <a href="#" class="btn-buy">Register!</a>
+                <a href="https://forms.gle/JmoCinPYJNk2kQ3LA" class="btn-buy">Register!</a>
               </div>
             </div>
           </div>
@@ -857,25 +851,17 @@
 
           <div class="col-lg-8 mt-5 mt-lg-0">
 
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+            <form action="https://script.google.com/macros/s/AKfycby8YHMvpmhgSMixo1q3BtmZnJzSG9BUv84xti2WON5lG3q2h7J1pFsXlXY3TLofBWdm/exec" method="post">
               <div class="row gy-2 gx-md-3">
                 <div class="col-md-6 form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
+                  <input name="Email" type="email" placeholder="Email" required>
                 </div>
                 <div class="col-md-6 form-group">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
-                </div>
-                <div class="form-group col-12">
-                  <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
+                  <input name="Name" type="text" placeholder="Message" required>
                 </div>
                 <div class="form-group col-12">
                 </div>
-                <div class="my-3 col-12">
-                  <div class="loading">Loading</div>
-                  <div class="error-message"></div>
-                  <div class="sent-message">Your message has been sent. Thank you!</div>
-                </div>
-                <div class="text-center col-12"><button type="submit">Send Message</button></div>
+                <div class="text-center col-12"><button type="submit">Send</button></div>
               </div>
             </form>
 
