--- a/index.html
+++ b/index.html
@@ -204,9 +204,10 @@
               <li><i class="bx bx-check-double"></i> Use the potential of the international connections to ensure high quality of teaching , learning and certification.</li>
             </ul>
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum
+              The Colleg of Computing and Information Technology at Shaqra University is dedicated to provide the students excellent infrastructure and quality 
+              courses for the development of the students in various spheres of Computer Science. We are dedicated to improve the skills of the students that make them
+              ready for the labor market and compete with the global environment. The students acquire education and professional skills using our academic connects and earn 
+              international level certifications. 
             </p>
           </div>
 
