--- a/index.html
+++ b/index.html
@@ -719,6 +719,11 @@
                 <li>Develop iOS Applications</li>
                 <li>Machine Learning with Swift and iOS Applications </li>
                 <li class="na">Swift Enterprice</li>
+                <li>
+                  <div class="btn-wrap">
+                    <a href="https://aatce.github.io/aatc/" class="btn-buy">AATCe-SU</a>
+                  </div>
+                </li>
               </ul>
               <div class="btn-wrap">
                 <a href="https://forms.gle/JmoCinPYJNk2kQ3LA" class="btn-buy">Enroll Now!</a>
