--- a/index.html
+++ b/index.html
@@ -671,6 +671,8 @@
               <div class="member-info">
                 <h4>Dr. Nayyar Ahmed Khan</h4>
                 <span>Administrator & Trainer</span>
+                <div class="badge-base LI-profile-badge" data-locale="en_US" data-size="medium" data-theme="light" data-type="VERTICAL" data-vanity="khannayyar" data-version="v1"><a class="badge-base__link LI-simple-link" href="https://sa.linkedin.com/in/khannayyar?trk=profile-badge">Nayyar Khan</a></div>
+              
               </div>
             </div>
           </div>
