--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           <div class="icon-box">
             <div class="icon"><i class="ri-fingerprint-line"></i></div>
             <h4 class="title"><a href="">AWS Academy</a></h4>
-            <p class="description">AWS Academy in association with College of Computing and Information Technology delivers courses on Cloud Computing and allied AWS technologies.</p>
+            <p class="description">AWS Academy in association with the College of Computing and Information Technology delivers courses on Cloud Computing and allied AWS technologies.</p>
           </div>
         </div>
 
@@ -123,7 +123,7 @@
         <div class="row content">
           <div class="col-lg-6">
             <p>
-              Academy connect mission statement is, “to enhance the capability of the students by providing real-time work experience on platform provided by software companies to make him ready for recent trends in the market”.
+              Academy Connect mission statement is “to enhance the students' capability by providing real-time work experience on the platform provided by software companies to prepare them for recent market trends”.
             </p>
             <ul>
               <li><i class="ri-check-double-line"></i> Earning a certificate from well-known software companies</li>
@@ -157,21 +157,21 @@
 
           <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
             <div class="count-box">
-              <span data-purecounter-start="0" data-purecounter-end="48" data-purecounter-duration="2" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="63" data-purecounter-duration="2" class="purecounter"></span>
               <p>Coures Hosted</p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
             <div class="count-box">
-              <span data-purecounter-start="0" data-purecounter-end="5" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="6" data-purecounter-duration="1" class="purecounter"></span>
               <p>Academies Running Years</p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-5 col-6 d-md-flex align-items-md-stretch">
             <div class="count-box">
-              <span data-purecounter-start="0" data-purecounter-end="798" data-purecounter-duration="2" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="1881" data-purecounter-duration="2" class="purecounter"></span>
               <p>Certificates Earned by Students</p>
             </div>
           </div>
